5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1716_2498.log
== TEST (2019-05-09 16:51:48) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

Numerodeanos = 0

-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:51:54) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

Numerodeanos = 0

-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:52:48) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

Numerodeanos = 0

-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:08:18) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

N° = 0

-- ERROR:
File "XXXX", line 6
    N° = 0
     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:08:23) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

N = 0

-- ERROR:
File "XXXX", line 6
    N° = 0
     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:08:34) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    No.anos = 0
NameError: name 'No' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:11:38) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

while(PCPA > PCPB ):
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:11:48) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

	while(PCPA > PCPB ):
	
-- ERROR:
File "XXXX", line 10
    while(PCPA > PCPB ):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:11:56) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

while(PCPA > PCPB ):
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:12:01) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

while(PCPA > PCPB ):
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:12:08) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

while( PCPA > PCPB ):
-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:12:42) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

while( PCPA > PCPB ):
	No.HabA *0.03
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    No.anos = 0
NameError: name 'No' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:13:17) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

while( PCPA > PCPB ):
	No.HabA *0.03
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    No.anos = 0
NameError: name 'No' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:15:43) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

while( PCPA > PCPB ):
	if(0 <= PCPA <= 3 ):
		
	No.HabA *0.03
-- ERROR:
File "XXXX", line 13
    No.HabA *0.03
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:15:52) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

while( PCPA > PCPB ):
	if(0 <= PCPA <= 3 ):	
-- ERROR:
File "XXXX", line 12
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:16:21) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No.anos = 0
No.HabA = 0
No.HabB = 0

while( PCPA > PCPB ):
	if(0 <= PCPA <= 3 ):
		PCPA = PCPA * 0.03
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    No.anos = 0
NameError: name 'No' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:17:03) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))



while( PCPA > PCPB ):
	if(0 <= PCPA <= 3 ):
		PCPA = PCPA * 0.03
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    No.anos = 0
NameError: name 'No' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:17:34) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))



while( PCPA > PCPB ):
	if(0 <= PCPA <= 3 ):
		PCPA = PCPA * 0.03
		print(PCPA)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    No.anos = 0
NameError: name 'No' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:19:07) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No_anos = 0

while( PCPA > PCPB ):
	if(0 <= PCPA <= 3 ):
		PCPA = PCPA * 0.03
		print(PCPA)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    No.anos = 0
NameError: name 'No' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:35:17) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No_anos = 0

while( PCPA > PCPB ):
	PCPA = PCPA/100
	PCPB = PCPB/100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    No.anos = 0
NameError: name 'No' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:35:45) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No_anos = 0

while( PCPA > PCPB ):
	PCPA = PCPA/100
	PCPB = PCPB/100
	print(PCPA)
	print(PCPB)
-- OUTPUT:
0.355
0.105
0.0035499999999999998
0.00105
3.5499999999999996e-05
1.05e-05
3.5499999999999994e-07
1.05e-07
3.5499999999999995e-09
1.05e-09
3.5499999999999994e-11
1.0500000000000001e-11
3.5499999999999995e-13
1.0500000000000001e-13
3.5499999999999997e-15
1.0500000000000001e-15
3.55e-17
1.0500000000000001e-17
3.55e-19
1.0500000000000001e-19
3.55e-21
1.05e-21
3.5499999999999996e-23
1.05e-23
3.5499999999999996e-25
1.05e-25
3.549999999999999e-27
1.05e-27
3.5499999999999995e-29
1.0500000000000001e-29
3.5499999999999995e-31
1.0500000000000002e-31
3.55e-33
1.0500000000000001e-33
3.5499999999999995e-35
1.0500000000000001e-35
3.5499999999999995e-37
1.05e-37
3.55e-39
1.05e-39
3.5499999999999995e-41
1.0499999999999999e-41
3.5499999999999993e-43
1.05e-43
3.549999999999999e-45
1.05e-45
3.549999999999999e-47
1.05e-47
3.549999999999999e-49
1.05e-49
3.549999999999999e-51
1.05e-51
3.549999999999999e-53
1.0500000000000001e-53
3.549999999999999e-55
1.05e-55
3.549999999999999e-57
1.0500000000000001e-57
3.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:36:04) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

No_anos = 0

while( PCPA > PCPB ):
	PCPA = PCPA/100
	PCPB = PCPB/100
	print(PCPA)
	print(PCPB)
-- OUTPUT:
0.355
0.105
0.0035499999999999998
0.00105
3.5499999999999996e-05
1.05e-05
3.5499999999999994e-07
1.05e-07
3.5499999999999995e-09
1.05e-09
3.5499999999999994e-11
1.0500000000000001e-11
3.5499999999999995e-13
1.0500000000000001e-13
3.5499999999999997e-15
1.0500000000000001e-15
3.55e-17
1.0500000000000001e-17
3.55e-19
1.0500000000000001e-19
3.55e-21
1.05e-21
3.5499999999999996e-23
1.05e-23
3.5499999999999996e-25
1.05e-25
3.549999999999999e-27
1.05e-27
3.5499999999999995e-29
1.0500000000000001e-29
3.5499999999999995e-31
1.0500000000000002e-31
3.55e-33
1.0500000000000001e-33
3.5499999999999995e-35
1.0500000000000001e-35
3.5499999999999995e-37
1.05e-37
3.55e-39
1.05e-39
3.5499999999999995e-41
1.0499999999999999e-41
3.5499999999999993e-43
1.05e-43
3.549999999999999e-45
1.05e-45
3.549999999999999e-47
1.05e-47
3.549999999999999e-49
1.05e-49
3.549999999999999e-51
1.05e-51
3.549999999999999e-53
1.0500000000000001e-53
3.549999999999999e-55
1.05e-55
3.549999999999999e-57
1.0500000000000001e-57
3.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:20:15) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

anos = 0

while ( NHA < NHB ):
	NHA = NHA + ( NHA * (PCPA / 100))
	NHB = NHB + ( NHB * (PCPB / 100))
	anos = anos + 1
	
print(anus)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(anus)
NameError: name 'anus' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:20:24) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

anos = 0

while ( NHA < NHB ):
	NHA = NHA + ( NHA * (PCPA / 100))
	NHB = NHB + ( NHB * (PCPB / 100))
	anos = anos + 1
	
print(anos)
-- EXECUTION TIME:
0.233488
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:20:44) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

anos = 0

while ( NHA < NHB ):
	NHA = NHA + ( NHA * (PCPA / 100))
	NHB = NHB + ( NHB * (PCPB / 100))
	anos = anos + 2
	
print(anos)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:21:23) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

anos = 0

while ( NHA < NHB ):
	NHA = NHA + ( NHA * (PCPA / 100))
	NHB = NHB + ( NHB * (PCPB / 100))
	anos = anos + 1
	
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:22:21) 
-- CODE:
NHA = int(input("No de hab da cidade A: "))
NHB = int(input("No de hab da cidade B: "))
PCPA = float(input("Percentual de Crescimento Pop.A: "))
PCPB = float(input("Percentual de crescimento Pop.B: "))

anos = 0

while ( NHA < NHB ):
	NHA = NHA + ( NHA * (PCPA / 100))
	NHB = NHB + ( NHB * (PCPB / 100))
	anos = anos + 1
	
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
